--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
 	<div class="row" style="display:flex;">
 		<div class="column" style="flex:50%">
+			<input id="url1"></input>
+		</div>
+		<div class="column" style="flex:50%">
+			<input id="url2"></input>
+		</div>
+	</div>
+	<div class="row" style="display:flex;">
+		<div class="column" style="flex:50%">
 			<textarea style="width:600px; height:400px;border:1px solid #000000;" id="editor1"></textarea>
 		</div>
 		<div class="column" style="flex:50%">
